# AutoDocs

./: .dockerignore  .env.example  .env.local.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyrightconfig.json
ingestion/: AGENTS.md  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements_lock.txt
ingestion/src/ai_analysis/: parallel_summaries.py  summaries.py
ingestion/src/api/: ingestion.py  job_manager.py  main.py  schemas.py
ingestion/src/ast_parsing/: __init__.py  constants.py  file_discovery.py  hybrid_parser.py  language_parser.py  parser.py  scip_pb2.py  scip_symbol_resolution.py  symbol_mapper.py  types.py
ingestion/src/ast_parsing/queries/: __init__.py  javascript.py  python.py  typescript.py
ingestion/src/ast_parsing/utils/: __init__.py  db_utils.py  fs_utils.py  git_utils.py  language_helpers.py  path_utils.py
ingestion/src/ast_parsing/utils/ts_utils/: package_discovery.py  package_registry.py  tsconfig_parser.py
ingestion/src/dag_builder/: __init__.py  netx.py
ingestion/src/database/: __init__.py  manager.py  models.py  types.py
ingestion/src/embeddings/: __init__.py  generator.py  models.py  openai_client.py  search.py
ingestion/tests/: conftest.py  test_git_utils_integration.py  test_integration_parallel.py  test_monorepo_configurations.py  test_package_registry_enhanced.py  test_parallel_ai_summaries.py  test_token_estimation.py
ingestion/tests/test_ai_analysis/: test_summaries.py
ingestion/tests/test_api/: conftest.py  test_api_integration.py
ingestion/tests/test_ast_parsing/: __init__.py  conftest.py  test_function_calls.py  test_git_incremental_parsing.py  test_import_export.py  test_jsx_components.py  test_repository_integration.py  test_type_extraction.py
ingestion/tests/test_ast_parsing/test_files/: test-comprehensive.tsx  test-default-export.ts  test-import-export.ts  test-jsx-components.tsx  test-types.ts
ingestion/tests/typescript-repos/direct-imports-repo/: package.json  tsconfig.json
ingestion/tests/typescript-repos/package-based-repo/: package.json  tsconfig.json
ingestion/tests/typescript-repos/pnpm-workspace-repo/: package.json  tsconfig.json
ingestion/tests/typescript-repos/yarn-workspace-repo/: package.json  tsconfig.json
(+135 files in other folders)
